--- a/RealAI/Platforms/Android/AndroidManifest.xml
+++ b/RealAI/Platforms/Android/AndroidManifest.xml
@@ -3,8 +3,14 @@
 	xmlns:android="http://schemas.android.com/apk/res/android" 
 	package="com.oblivionburn.realai2" 
 	android:installLocation="internalOnly" 
-	android:versionCode="54" 
-	android:versionName="2.9">
+	android:versionCode="55" 
+	android:versionName="2.10">
+	
+	<queries>
+		<intent>
+			<action android:name="android.intent.action.TTS_SERVICE" />
+		</intent>
+	</queries>
 	
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:label="Real AI"></application>
 	<uses-sdk android:minSdkVersion="24" android:targetSdkVersion="33" />
